App3/Yaml/svc.yml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: app3
    name: app3
    namespace: default
spec:
  ports:
   - port: 2500
     targetPort: 2500
  selector:
    app: app3
