App3/Yaml/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app3
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - name: app3
    match:
    - uri:
        prefix: /size
    route:
    - destination:
        host: app3.default.svc.cluster.local
        port:
          number: 2500
